...

    return SingleChildScrollView(
      padding: const EdgeInsets.all(24),
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          Text('Welcome back,',
              style: TextStyle(
                  color: AppTheme.getTextSecondary(context), fontSize: 16)),
          Text(student.firstName,
              style: TextStyle(
                  color: AppTheme.getTextPrimary(context),
                  fontSize: 32,
...
